maill intent added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="event3">event3</string>
     <string name="event4">event4</string>
     <string name="getpass">Get Pass</string>
+    <string name="passsent">Check your mail! </string>
+
 
 
     <string name="menu_home">Home</string>
